--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,28 +1,43 @@
 {
-    "env": {
-        "browser": true,
-        "es2021": true
-    },
     "extends": [
-        "plugin:react/recommended",
-        "airbnb",
-        "prettier"
+      "eslint:recommended",
+      "plugin:import/errors",
+      "plugin:react/recommended",
+      "plugin:jsx-a11y/recommended",
+      "plugin:react-hooks/recommended",
+      "prettier",
+      "plugin:import/warnings",
+      "plugin:import/typescript"
     ],
-    "parserOptions": {
-        "ecmaFeatures": {
-            "jsx": true
-        },
-        "ecmaVersion": "latest",
-        "sourceType": "module"
-    },
-    "plugins": [
-        "react",
-        "prettier"
-    ],
-    "ignorePatterns": [ "*.test.js", "*.test.tsx" ],
     "rules": {
-        "react/jsx-filename-extension": [ 1, { "extensions": [".js", ".jsx"] }],
-        "react/react-in-jsx-scope": "off"
+      "react/prop-types": "off",
+      "react/jsx-uses-react": "off",
+      "react/react-in-jsx-scope": "off",
+      "react/self-closing-comp": "warn"
+    },
+    "plugins": ["react", "import", "jsx-a11y"],
+    "parserOptions": {
+      "ecmaVersion": 2021,
+      "sourceType": "module",
+      "ecmaFeatures": {
+        "jsx": true
+      }
+    },
+    "env": {
+      "es6": true,
+      "browser": true,
+      "jest": true,
+      "node": true
+    },
+    "settings": {
+      "import/resolver": {
+            "node": {
+                "extensions": [".js", ".jsx", ".ts", ".tsx"],
+                "moduleDirectory": ["node_modules", "src/"]
+            }
+      },
+      "react": {
+        "version": "detect"
+      }
     }
-    
-}
+  }
