--- a/package.json
+++ b/package.json
@@ -6,21 +6,24 @@
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.3",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^0.21.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "5.0.0",
+    "styled-components": "^5.2.1",
     "web-vitals": "^2.1.4",
-    "axios": "^0.21.1",
-    "react-router-dom": "^5.2.0"
+    "yup": "^0.32.9",
+    "react-icons": "^4.2.0"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "lint": "eslint ./",
+    "lint": "eslint \"src/**/*.{js,jsx}\" --quiet",
     "lintFix": "eslint ./ --fix",
-    "format": "prettier --write \"**/*.{js,jsx,json,md}\"",
+    "format": "prettier --write \"src/**/*.{js,jsx}\"",
     "postinstall": "husky install"
   },
   "eslintConfig": {
