--- a/.prettierrc
+++ b/.prettierrc
@@ -1,6 +1,11 @@
 {
+    "bracketSpacing": true,
+    "jsxBracketSameLine": true,
+    "printWidth": 80,
     "singleQuote": true,
-    "trailingComma": "es5",
+    "trailingComma": "none",
     "tabWidth": 2,
-    "useTabs": true
-}
+    "useTabs": false,
+    "react/jsx-max-props-per-line": [1, { "when": "always" }]
+  }
+  
